# BackendAPI

./: Dockerfile  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  test.py
app/classes/: fact_check.py  fallacy.py  transcript.py
app/clients/: fallacy_detector.py
